# gif-api

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
.github/workflows/: gif_api_ci.yml
configuration/: .env.example  nginx.conf
deploy/: Dockerfile  start.sh
gif_api/: __main__.py
gif_api/api/: __init__.py
gif_api/api/v1/: __init__.py  add_gif.py  add_trending.py  delete_gif.py  get_gif.py  get_trending.py  health.py
gif_api/api/v1/utils/: __init__.py  components.py  components.yaml  errors.py
gif_api/config/: __init__.py  settings.py
gif_api/db/: __init__.py  alembic.ini
gif_api/db/migrations/: env.py
gif_api/db/migrations/versions/: 2022_12_16_01_41-99c36a7f47dc_.py  2022_12_18_22_56-e32cd39d8e56_.py
gif_api/db/models/: __init__.py  gif.py  trending.py
gif_api/db/utils/: gif.py  health.py  trending.py
gif_api/dto/: __init__.py  gif.py
gif_api/utils/: __init__.py  errors.py  logger.py  routes.py  swagger.py
tests/: conftest.py  utils.py
tests/test_api/: conftest.py  test_add_gif.py  test_add_trending.py  test_delete_gif.py  test_get_gif.py  test_get_trending.py  test_health.py
